--- a/index.html
+++ b/index.html
@@ -24,54 +24,113 @@
   <li>F = 0%-59%</li>
 
   <button
-    onclick="addGrades(document.getElementById('semester1Input').value, document.getElementById('semester2Input').value)">Add
+    onclick="addGrades(document.getElementById('semester1Input').value, document.getElementById('semester2Input').value, document.getElementById('honors').checked)">Add
     Grades</button>
 
-  <input type="number" value="0" id="semester1Input">
-  <input type="number" value="0" id="semester2Input">
-  <p id="GPA"></p>
+  <input type="checkbox" id="honors" name="honors" value="">
+  <label for="honors"> Honors/AP?</label><br>
+
+  <input type="number" value="" id="semester1Input">
+  <input type="number" value="" id="semester2Input">
+  <p id="unweightedGPA"></p>
+  <p id="weightedGPA"></p>
 
   <script>
-    var Grades = [];
 
-    // addGrades is called every time the user clicks the "Add Grades" button, the value of the input box is added to the Grades array.
-    function addGrades(grade1, grade2) {
-
-      // Insert grade in Grades.
-      Grades.push(Number(grade1));
-      Grades.push(Number(grade2));
-
-      calculateGPA();
-      console.log(Grades);
+    class YearlyClass {
+      constructor(semester1, semester2, isHonors) {
+        this.semester1 = semester1;
+        this.semester2 = semester2;
+        this.isHonors = isHonors;
+      }
     }
 
-    // calculateGPA is called every time the Grades array is changed, it calculates the GPA by adding all the grades in the array and dividing by the length of the array.
-    function calculateGPA() {
-      let GP = 0;
+    var Classes = [];
 
-      // This loop adds up all of the grade points.
-      for (let i = 0; i < Grades.length; i++) {
-        if (Grades[i] >= 90) {
-          GP += 4.0;
+    // addGrades is called every time the user clicks the "Add Grades" button, the value of the input box is added to the Grades array.
+    function addGrades(grade1, grade2, isHonors) {
+
+      var newYearlyClass = new YearlyClass((grade1 == "") ? -1 : Math.abs(Number(grade1)), (grade2 == "") ? -1 : Math.abs(Number(grade2)), isHonors);
+
+      // Insert grade in Grades.
+      Classes.push(newYearlyClass);
+
+      // Calculate GPA.
+      var unweightedGPA = calculateUnweightedGPA();
+      var weightedGPA = calculateWeightedGPA(unweightedGPA);
+
+      // Update GPA Text
+      document.getElementById("unweightedGPA").innerText = unweightedGPA;
+      document.getElementById("weightedGPA").innerText = weightedGPA;
+      console.log(Classes);
+    }
+
+    // calculatedUnweightedGPA sets the unweighted GPA value because it adds up the values of all of the grade points and divides them by the amount of grade points that there are.
+    function calculateUnweightedGPA() {
+      let GP = 0;
+      let totalSemesters = 0;
+
+      for (let i = 0; i < Classes.length; i++) {
+        if (Classes[i].semester1 != -1) {
+          totalSemesters++;
+
+          if (Classes[i].semester1 >= 90) {
+            GP += 4.0;
+          }
+          else if (Classes[i].semester1 >= 80) {
+            GP += 3.0;
+          }
+          else if (Classes[i].semester1 >= 70) {
+            GP += 2.0;
+          }
+          else if (Classes[i].semester1 >= 60) {
+            GP += 1.0;
+          }
         }
-        else if (Grades[i] >= 80) {
-          GP += 3.0;
-        }
-        else if (Grades[i] >= 70) {
-          GP += 2.0;
-        }
-        else if (Grades[i] >= 60) {
-          GP += 1.0;
+
+        if (Classes[i].semester2 != -1) {
+          totalSemesters++;
+
+          if (Classes[i].semester2 >= 90) {
+            GP += 4.0;
+          }
+          else if (Classes[i].semester2 >= 80) {
+            GP += 3.0;
+          }
+          else if (Classes[i].semester2 >= 70) {
+            GP += 2.0;
+          }
+          else if (Classes[i].semester2 >= 60) {
+            GP += 1.0;
+          }
         }
       }
 
       // Calculate GPA
-      let GPA = Math.round((GP / Grades.length) * 100) / 100;
+      let GPA = Math.round((GP / totalSemesters) * 100) / 100;
 
-      // Update Text
-      document.getElementById("GPA").innerText = GPA;
+      return GPA;
+    }
+
+    // This calculates the weighted GPA value by adding 0.04 for every honors class to the given unweighted GPA.
+    function calculateWeightedGPA(unweightedGPA) {
+      let totalHonors = 0;
+
+      for (let i = 0; i < Classes.length; i++) {
+        if (Classes[i].isHonors && (Classes[i].semester1 != -1 || Claases[i].semester2 != -1)) {
+          totalHonors++;
+        }
+      }
+
+      // Calculate GPA
+      let GPA = unweightedGPA + (0.04 * totalHonors);
+
+      return GPA;
     }
   </script>
+
+
+
 </body>
 
 </html>
