Added Semester GPA Calculations.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,98 @@
   <p id="unweightedGPA"></p>
   <p id="weightedGPA"></p>
 
+  <br>
+
+  <button
+    onclick="addGrades2(document.getElementById('quarter1Input').value, document.getElementById('quarter2Input').value, document.getElementById('finalExamInput').value, document.getElementById('honors2').checked)">Add
+    Grades</button>
+
+  <input type="checkbox" id="honors2" name="honors2" value="">
+  <label for="honors2"> Honors/AP?</label><br>
+
+  <input type="number" value="" id="quarter1Input">
+  <input type="number" value="" id="quarter2Input">
+  <input type="number" value="" id="finalExamInput">
+
+  <p id="unweightedGPA2"></p>
+  <p id="weightedGPA2"></p>
+
+  <!-- Semester GPA -->
+  <script>
+    class Semester {
+      constructor(quarter1, quarter2, finalExam, isHonors) {
+        this.quarter1 = quarter1;
+        this.quarter2 = quarter2;
+        this.finalExam = finalExam;
+        this.isHonors = isHonors;
+      }
+    }
+
+    var Classes2 = [];
+
+    // addGrades2 is called every time the user clicks the "Add Grades" (2) button, the value of the input box is added to the Classes2 array.
+    function addGrades2(grade1, grade2, finalGrade, isHonors) {
+
+      var newSemester = new Semester((grade1 == "") ? -1 : Math.abs(Number(grade1)), (grade2 == "") ? -1 : Math.abs(Number(grade2)), (finalGrade == "") ? -1 : Math.abs(Number(finalGrade)), isHonors);
+
+      // Insert grade in Grades.
+      Classes2.push(newSemester);
+
+      // Calculate GPA.
+      var unweightedGPA = calculateUnweightedGPA2();
+      var weightedGPA = calculateWeightedGPA2(unweightedGPA);
+
+      // Update GPA Text
+      document.getElementById("unweightedGPA2").innerText = unweightedGPA;
+      document.getElementById("weightedGPA2").innerText = weightedGPA;
+      console.log(Classes2);
+    }
+
+    // calculatedUnweightedGPA2 sets the unweighted GPA value by adding up the values of all of the grade points and dividing them by the amount of classes (semester weights are 40% for quarters and 20% for final exams).
+    function calculateUnweightedGPA2() {
+      let GP = 0;
+
+      for (let i = 0; i < Classes2.length; i++) {
+        var semesterAvg = ((Classes2[i].quarter1 * 0.4) + (Classes2[i].quarter2 * 0.4) + (Classes2[i].finalExam * 0.2));
+
+        if (semesterAvg >= 90) {
+          GP += 4.0;
+        }
+        else if (semesterAvg >= 80) {
+          GP += 3.0;
+        }
+        else if (semesterAvg >= 70) {
+          GP += 2.0;
+        }
+        else if (semesterAvg >= 60) {
+          GP += 1.0;
+        }
+      }
+
+      // Calculate GPA
+      let GPA = Math.round((GP / Classes2.length) * 100) / 100;
+
+      return GPA;
+    }
+
+    // This calculates the weighted GPA value by adding 0.04 for every honors class to the given unweighted GPA.
+    function calculateWeightedGPA2(unweightedGPA) {
+      let totalHonors = 0;
+
+      for (let i = 0; i < Classes2.length; i++) {
+        if (Classes2[i].isHonors) {
+          totalHonors++;
+        }
+      }
+
+      // Calculate GPA
+      let GPA = unweightedGPA + (0.04 * totalHonors);
+
+      return GPA;
+    }
+  </script>
+
+  <!-- Yearly GPA -->
   <script>
 
     class YearlyClass {
@@ -47,7 +139,7 @@
 
     var Classes = [];
 
-    // addGrades is called every time the user clicks the "Add Grades" button, the value of the input box is added to the Grades array.
+    // addGrades is called every time the user clicks the "Add Grades" button, the value of the input box is added to the Classes array.
     function addGrades(grade1, grade2, isHonors) {
 
       var newYearlyClass = new YearlyClass((grade1 == "") ? -1 : Math.abs(Number(grade1)), (grade2 == "") ? -1 : Math.abs(Number(grade2)), isHonors);
@@ -65,7 +157,7 @@
       console.log(Classes);
     }
 
-    // calculatedUnweightedGPA sets the unweighted GPA value because it adds up the values of all of the grade points and divides them by the amount of grade points that there are.
+    // calculatedUnweightedGPA sets the unweighted GPA value by adding up the values of all of the grade points and dividing them by the amount of classes.
     function calculateUnweightedGPA() {
       let GP = 0;
       let totalSemesters = 0;
