--- a/index.html
+++ b/index.html
@@ -82,10 +82,13 @@
     <button onclick="deleteSemesterGrades()" class="reset-button"> Reset </button>
   </div>
 
+  <div class="hide-snackbar" id="snackbar"></div>
+  
   <!-- Import Scripts -->
   <script src="semesterGPA.js"></script>
   <script src="yearlyGPA.js"></script>
   <script src="tabs.js"></script>
+  <script src="snackbar.js"></script>
 </body>
 
 </html>
